--- a/views/pages/db.ejs
+++ b/views/pages/db.ejs
@@ -13,7 +13,7 @@
 
 <ul>
     <% results.forEach(function(r) { %>
-        <li><%= r.id %> - <%= r.name %> <%= r.description %> </li>
+        <li><!-- <%= r.id %> <%= r.firstname %> <%= r.lastname %> <%= r.weight %> <%= r.height %> <%= r.firstname %> <%= r.hair_colour %> <%= r.gpa %>  --></li>
     <% }); %>
 </ul>
 
