--- a/public/confirmed-game/style.css
+++ b/public/confirmed-game/style.css
@@ -11,14 +11,8 @@ body{
     -webkit-user-select:none;
 }
 
-h1{
-    text-align: center;
-    font-size:4vw;
-    font-family: 'Gloria Hallelujah', cursive;
-}
-
 .timeplane{
-    font-family: 'Coda', cursive;
+    font-family: 'Gloria Hallelujah', cursive;
     position:fixed;
     color:white;right:0px;
     top:0px;
@@ -110,7 +104,7 @@ h1{
 }
 
 .board .tips{
-    position:absolute; 
+/*    position:absolute; 
     top:150px; 
     left:260px; 
     width:500px; 
@@ -126,7 +120,20 @@ h1{
     -moz-box-shadow: 5px 5px 5px #666666; 
     -webkit-box-shadow: 5px 5px 5px #666666; 
     box-shadow:5px 5px 5px #666666; 
-    display:none;
+    display:none;*/
+
+    display: none; 
+    position: absolute; 
+    top: 25%; 
+    left: 25%; 
+    width: 55%; 
+    height: 45%; 
+    padding: 20px; 
+    border: 10px solid #fdd12a; 
+    background-color: white;
+    border-radius:20px; 
+    z-index:1002; 
+    overflow: auto; 
 }
 
 .board .tips p{
@@ -177,7 +184,7 @@ h1{
     left:0px; 
     width:364px; 
     height:90px; 
-    background:url('../images/start.png') no-repeat; 
+    background:url('images/start.png') no-repeat; 
     display:none;
 }
 
@@ -187,7 +194,7 @@ h1{
     left:0px; 
     width:364px; 
     height:90px; 
-    background:url('../images/success.png') no-repeat; 
+    background:url('images/success.png') no-repeat; 
     display:none;
 }
 
@@ -197,7 +204,7 @@ h1{
     left:0px; 
     width:364px; 
     height:90px; 
-    background:url('../images/fail.png') no-repeat; 
+    background:url('images/fail.png') no-repeat; 
     display:none;
 }
 
@@ -207,7 +214,7 @@ h1{
     left:0px; 
     width:364px; 
     height:90px; 
-    background:url('../images/clear.png') no-repeat; 
+    background:url('images/clear.png') no-repeat; 
     display:none;
 }
 
