--- a/public/confirmed-game/style.css
+++ b/public/confirmed-game/style.css
@@ -1,7 +1,3 @@
-/*html{
-    width:100%; 
-    height:100%;
-}*/
 
 body{
     background:url('images/gamebg.jpg');
@@ -15,20 +11,8 @@ body{
     -webkit-user-select:none;
 }
 
-h1{
-    text-align: center;
-    font-size:4vw;
-    color: #000000;
-    font-family: 'Gloria Hallelujah', cursive;
-    position:absolute;
-    top:-5%;
-    left:18%;
-    margin-left:10%;
-    margin-top:10%；
-}
-
 .timeplane{
-    font-family: 'Coda', cursive;
+    font-family: 'Gloria Hallelujah', cursive;
     position:fixed;
     text-align :center ;
     color:black;
@@ -78,29 +62,7 @@ h1{
     margin-top:-20%; 
 }
 
-/*.board .topplane{
-    width:1020px; 
-    height:100px; 
-    margin:0px auto;
-}*/
-
-/*.board .topplane .levelplane{
-    float:left; width:500px; 
-    height:100px; line-height:100px; 
-    margin-left:30px; font-size:45px; 
-    font-weight:bold; font-family:Arial; 
-    color:#FFFF00; text-shadow:3px 3px 3px #999999; 
-    display:none;
-}
-*/
-/*.board .topplane .process .timeplane{
-    font-size:18px; 
-    font-weight:bold; 
-    color:#FFFF00; 
-    margin:42px 0px 0px 187px;
-}*/
-
-.board .gameplane{/*p牌的位置*/
+.board .gameplane{
     width:80vw; 
     height:40vw; 
     margin:0px auto;
@@ -113,16 +75,6 @@ h1{
     text-align:center;
 }
 
-/*.board .gameplane .card{
-    width:142px; 
-    margin:0px auto 0px auto; 
-    position:relative;
-}*/
-
-/*.board .gameplane .card .list{
-    position:absolute;
-}*/
-
 .board .gameplane .card .list cavans{
     border:1px solid #DEDEDE; 
     margin-top:9px; 
@@ -132,33 +84,19 @@ h1{
     cursor:pointer;
 }
 
-/*.board .gameplane .card .list img{
-    border:1px solid #DEDEDE; 
-    margin-top:9px; 
-    -moz-box-shadow: 3px 3px 3px #666666; 
-    -webkit-box-shadow: 3px 3px 3px #666666; 
-    box-shadow:3px 3px 3px #666666; 
-    cursor:pointer;
-}*/
-
 .board .tips{
     position:absolute; 
-    top:8vw; 
-    left:20vw; 
-    width:30vw; 
-    height:20vw; 
-    border:1vw solid #FFFFFF; 
-    background:#DEDEDE; 
-    padding:10px; 
-    font-size:14px;
-    border-radius:10px; 
-    /*-moz-border-radius:10px; 
-    -o-border-radius:10px; 
-    -webkit-border-radius:10px; 
-   -moz-box-shadow: 5px 5px 5px #666666; 
-    -webkit-box-shadow: 5px 5px 5px #666666; 
-    box-shadow:5px 5px 5px #666666; */
     display:none;
+    top: 25%;
+    left: 15%;
+    width: 55%;
+    height: 45%;
+    padding: 20px;
+    border: 10px solid #fdd12a;
+    background-color: white;
+    border-radius: 20px;
+    z-index: 1002;
+    overflow: auto;
 }
 
 .board .tips p{
@@ -190,12 +128,6 @@ h1{
     margin:10px auto; 
     padding:7px; 
     border-radius:5px; 
-   /* -moz-border-radius: 5px; 
-    -o-border-radius: 5px; 
-    -webkit-border-radius:5px; 
-    -moz-box-shadow: 3px 3px 3px #666666; 
-    -webkit-box-shadow: 3px 3px 3px #666666; 
-    box-shadow:3px 3px 3px #666666;*/
 }
 
 .board .tips .btn a:hover{
@@ -221,56 +153,6 @@ h1{
     background:url('images/success.png') no-repeat; 
     display:none;
 }
-
-/*.board .message_fail{
-    position:absolute; 
-    top:390px; 
-    left:0px; 
-    width:364px; 
-    height:90px; 
-    background:url('../images/fail.png') no-repeat; 
-    display:none;
-}
-*/
-/*.board .message_clear{
-    position:absolute; 
-    top:390px; 
-    left:0px; 
-    width:364px; 
-    height:90px; 
-    background:url('../images/clear.png') no-repeat; 
-    display:none;
-}*/
-
-/*.board .footer{
-    line-height:50px; 
-    text-align:center; 
-    color:#FFFFFF; 
-    font-size:16px;
-}
-
-.board .footer .hilite{
-    color:#FFFF00;
-}*/
-
-/*.clear{
-    clear:both; 
-    height:0px;
-}
-*/
-/** animate start **/
-/*.in {
-    -webkit-animation-timing-function: ease-out;
-    -webkit-animation-duration: 350ms;
-    -moz-animation-timing-function: ease-out;
-    -moz-animation-duration: 350ms;
-}
-.out {
-    -webkit-animation-timing-function: ease-in;
-    -webkit-animation-duration: 225ms;
-    -moz-animation-timing-function: ease-in;
-    -moz-animation-duration: 225ms;
-}*/
 
 .viewport-flip {
     -webkit-perspective: 1000px;
