--- a/public/homepage.css
+++ b/public/homepage.css
@@ -82,7 +82,7 @@ body{
     border-radius:20px;
     background-color: #ffffff;
 }
-#create{
+#poke{
 	margin: auto;
 	position: absolute;
     font-size:2vw;
@@ -96,7 +96,7 @@ body{
     bottom: 0;
     z-index: -1;
 }
-#join{
+#game{
 	margin: auto;
 	position: absolute;
     font-size:2vw;
