--- a/public/pokedex.css
+++ b/public/pokedex.css
@@ -12,18 +12,26 @@ td{
     text-align:center;
 }
 #picture{
-    width:40%;
-    height:40%;
+    width:35%;
+    height:35%;
+    position:absolute;
+    left:5%;
+    top:14%;
 }
 #attr{
-    font-size: 1.2vw;
+    font-size:1.2vw;
     color: #4d8673;
+    position:absolute;
+    left:32%;
+    top:14%;
 
 }
 #attr_data{
     font-size:1.2vw;
     color: #4d8673;
-    width:12%;
+    position:absolute;
+    left:42%;
+    top:14%;
 }
 #introduce{
     font-size:1.2vw;
@@ -78,7 +86,7 @@ td{
     display: none; 
     position: fixed; 
     top: 25%; 
-    left: 25%; 
+    left: 20%; 
     width: 55%; 
     height: 45%; 
     padding: 20px; 
