--- a/public/tmp.css
+++ b/public/tmp.css
@@ -46,7 +46,7 @@ ul {
 
 /* Login Page */
 
-.login.page {
+/*.login.page {
   background-color: #000;
 }
 
@@ -83,7 +83,7 @@ ul {
   color: #fff;
   font-weight: 100;
 }
-
+*/
 /* Chat page */
 
 .chat.page {
