--- a/public/tmp.css
+++ b/public/tmp.css
@@ -1,5 +1,3 @@
-/* Fix user-agent */
-
 * {
   box-sizing: border-box;
 }
@@ -48,7 +46,7 @@ ul {
 
 /* Login Page */
 
-.login.page {
+/*.login.page {
   background-color: #000;
 }
 
@@ -85,12 +83,12 @@ ul {
   color: #fff;
   font-weight: 100;
 }
-
+*/
 /* Chat page */
 
-.chat.page {
+/*.chat.page {
   display: none;
-}
+}*/
 
 /* Font */
 
