--- a/public/css/style.css
+++ b/public/css/style.css
@@ -48,3 +48,19 @@
     background-color: gray;
     border: 1px solid black;
 }
+.white_content { 
+    font-size:1.2vw;
+    color: #4d8673;
+    display: none; 
+    position: fixed; 
+    top: 25%; 
+    left: 25%; 
+    width: 50%; 
+    height: 45%; 
+    padding: 20px; 
+    border: 10px solid #fdd12a; 
+    background-color: white;
+    border-radius:20px; 
+    z-index:1002; 
+    overflow: auto; 
+ }
