--- a/public/game.css
+++ b/public/game.css
@@ -26,6 +26,12 @@ body{
     left: 5%; 
 }
 
+#3togoshow{
+    font-size:3vw;
+    position:center center;
+
+}
+
 #remotename{
     font-size:1.5vw;
     position: fixed; 
