--- a/public/game.css
+++ b/public/game.css
@@ -26,8 +26,11 @@ body{
     left: 5%; 
 }
 
-#3togoshow{
+#togoshow{
     font-size:4vw;
+    position: fixed; 
+    top: 50%; 
+    left: 50%; 
 
 }
 
