--- a/public/game.css
+++ b/public/game.css
@@ -30,6 +30,10 @@ body{
     font-size:3vw;
 
 }
+#waiting{
+    font-size:3vw;
+    position: center center;
+}
 
 #remotename{
     font-size:1.5vw;
