--- a/public/game.css
+++ b/public/game.css
@@ -20,14 +20,15 @@ body{
     height: 60%; 
 }
 #ownG{
-    font-size:1.5vw;
+    font-size:2vw;
+    font-weight:bold;
     position: fixed; 
     top: 20%; 
-    left: 5%; 
+    left: 18%; 
 }
 
 #togoshow{
-    font-size:2.6vw;
+    font-size:3svw;
 
 }
 #waiting{
@@ -35,21 +36,22 @@ body{
     
 }
 #ready{
-    font-size:2.6vw;
+    font-size:3vw;
 }
 
 #offline{
-    font-size:2.6vw;
+    font-size:3vw;
 }
 
 #result{
-    font-size:2.6vw;
+    font-size:3vw;
 }
 #remotename{
-    font-size:1.5vw;
+    font-size:2vw;
+    font-weight:bold;
     position: fixed; 
     top: 20%; 
-    left: 55%; 
+    left: 68%; 
 }
 td{
     text-align:center;
